--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "watch": "tsc -w",
     "prebuild": "yarn cleanup",
     "make:dts": "node scripts/make_dts.js",
-    "build": "tsc && yarn make:dts",
+    "build": "tsc && yarn make:dts && uglifyjs -c -m --source-map -o dist/pixi-tilemap.min.js dist/pixi-tilemap.js",
     "docs": "typedoc --out ./docs/ --readme README.md ./src/",
     "check:browserify": "yarn checkpack browserify -e test/checkpack.ts",
     "check:webpack": "yarn checkpack webpack -e test/checkpack.ts",
